# AIeXporter

./: .gitattributes  .gitignore  .mailmap  .projenrc.py  CHANGELOG.md  CLAUDE.md  Makefile  OPENROUTER.md  PUBLISH.md  README.md  main.py  pyproject.toml  quick-start.txt  requirements-dev.txt  setup.py  uv.projenrc.py
.claude/: settings.local.json
.github/workflows/: release.yml
.projen/: deps.json  tasks.json
aix/: __init__.py  api_client.py  api_keys.py  cli.py  collection.py  command_executor.py  commands.py  completion.py  config.py  exceptions.py  placeholder_generator.py  storage.py  template.py
aix/commands/: __init__.py  base.py  cli.py  executor.py  security.py
doc/: COMMANDS.md  INSTALLATION.md
docs/: API_PROVIDERS.md  COMMANDS.md  CUSTOM_PROVIDERS.md  INSTALLATION.md  OPENROUTER.md  PUBLISH.md  README.md  TEMPLATES.md  USAGE.md
promptconsole/: __init__.py  api_keys.py  cli.py  config.py
scripts/: auto_commit.sh
tests/: conftest.py  test_api_client.py  test_cli_integration.py  test_cli_provider.py  test_collection.py  test_command_executor.py  test_config.py  test_example.py  test_storage.py  test_template.py
tmp/: project_info.sh
