[project]
name = "promptconsole"
version = "0.1.0"
description = "A comprehensive prompt management and execution tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[project.scripts]
promptconsole = "main:main"
pc = "main:main"
