[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aix"
version = "0.18.0"
description = "AI executor - dynamic prompt management and execution tool"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Bozhidar Hadzhiev", email = "bhadzhiev@gmail.com"}
]
urls = {Homepage = "https://github.com/bhadzhiev/AIeXporter"}
license = {text = "MIT"}
keywords = ["cli", "ai", "prompts", "automation", "development-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "boto3>=1.35.0",
]

[project.scripts]
aix = "aix.cli:app"



[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=aix --cov-report=term-missing"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "aix/__init__.py:__version__"
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "ruff>=0.12.4",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "commitizen>=4.8.3",
]

